--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,193 @@
-body {
-  background: red;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+li{
+  list-style: none;
+}
+
+nav{
+  width: 100%;
+  height: 64px;
+  background-color: #032541;
+  display: flex;
+}
+.container{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.navbar{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar a img{
+  width: 154px;
+  height: 20px;
+}
+
+
+
+
+//////////////// NAV MENU ////////////////
+
+.nav__menu{
+  display: flex;
+  align-items: center;
+}
+
+.nav__menu li a{
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0.02rem;
+  text-transform: uppercase;
+}
+
+.join__menu{
+  display: flex;
+  align-items: center;
+}
+
+.join__menu li {
+  margin-left: 16px;
+}
+
+.section__content{
+  width: 100%;
+  height: 300%;
+  background-image: url(../img/bg.png);
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.section__title h2{
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.section__title h3{
+  font-size: 2rem;
+  font-weight: 600;
+  margin: 0;
+}
+
+
+/////////////SEARCH////////////// 
+
+
+.search__input{
+  width: 90%;
+  height: 46px;
+  line-height: 46px;
+  margin-top: 32px;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.search__input:focus{
+  outline: none;
+}
+
+.search__submit{
+  height: 47px;
+  padding: 10px 26px;
+  border: none;
+  margin-left: -110px;
+  background: linear-gradient(
+    to right,
+    rgba(30, 213, 169, 1) 0%,
+    rgba(1, 180, 228, 1) 100%
+  );
+  border-radius: 30px;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.search__submit:hover{
+  background: linear-gradient(
+    to right,
+    rgba(1, 180, 228, 1) 0%,
+    rgba(30, 213, 169, 1) 100%
+  );
+  color: black;
+  transition: 0.5s;
+}
+
+
+//////////FILMS/////////// 
+
+.films{
+  width: 100%;
+  height: auto;
+  padding: 32px 0;
+  background-color: white;
+  display: flex;
+}
+
+.films .container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.films h3{
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 32px;
+}
+
+
+
+
+.film {
+  margin-right: 23px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.film img {
+  width: 150px;
+  height: 225px;
+  border-radius: 8px;
+}
+
+.film h4 {
+  max-width: 150px;
+  font-size: 1em;
+  font-weight: 700;
+  color: #000;
+  cursor: pointer;
+  margin-top: 16px;
+}
+
+.film h4:hover {
+  color: #1ed5a9;
+}
+
+.film h5 {
+  font-weight: 400;
+  font-size: 1em;
+  color: rgba(0, 0, 0, 0.6);
 }
