--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -203,14 +203,11 @@ nav {
   }
 }
 
-
-
-.get__movie  {
+.get__movie {
   display: flex;
   flex-wrap: wrap;
-
-.link__people a{
+}
+.link__people a {
   color: #000;
   text-transform: uppercase;
-
 }
