--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -13,11 +13,14 @@
 .crew__people {
   display: flex;
 }
-.get__movie {
-  display: flex;
-  overflow: auto;
-  height: 380px;
+#index__hero {
+  .get__movie {
+    display: flex;
+    overflow: auto;
+    height: 380px;
+  }
 }
+
 
 ::-webkit-scrollbar {
   display: none;
