--- a/src/sass/pages/_searchall.scss
+++ b/src/sass/pages/_searchall.scss
@@ -4,4 +4,10 @@
 }
 .no_click {
     background-color: aqua;
+    margin: 1rem;
+    cursor: pointer;
 }
+// .active {
+//     background-color: #666;
+//     color: white;
+//   }
