--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -15,7 +15,7 @@ $facebook: #3b5999;
 $slack: #3aaf85;
 $twitter: #1da1f2;
 $dribbble: #DB4337;
-$borderColor:#edf0f7;
+$bgColor:rgba(32, 11, 11, 0.856);
 $gridGutter: 30px;
 $gridColumns: 12;
 $spacingCount: 8;
