--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -2,6 +2,8 @@
    display: flex;
    flex-wrap: nowrap;
    margin-right: 600px;
+   margin-left: -100px;
+ 
 }
 .actors__cols {
     display: flex;
@@ -11,3 +13,40 @@
     display: flex;
     overflow: scroll;
 }
+.cast__films {
+    display: flex;
+    overflow: scroll;
+}
+
+// .actor__img {
+//     width: 20px;
+//     height: 285px;
+// }
+.actor__img__wrapper{
+    .actor__imgs img{
+        width: 30rem;
+        height: 450px;
+        border-radius: 1rem;
+        object-fit: cover;
+        margin-top: 30px;
+        margin-left: 10px;
+    }
+}
+.actor__text{
+    margin: 50px;
+}
+
+.nav__part a {
+    color: $mainBlack;
+  
+  }
+  
+  .actor__dropdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    li {
+      padding: .3rem 1.3rem;
+    }
+    
+  }
