--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -19,6 +19,28 @@
   height: 380px;
 }
 
-::-webkit-scrollbar {
-  display: none;
+// Scrollbars
+
+// Main (body) Scrollbar
+
+body::-webkit-scrollbar {
+  width: 8px;
+  background-color: #fff;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #dbdbdb;
+  border-radius: 15px;
+}
+
+.get__movie::-webkit-scrollbar {
+  height: 8px;
+  border-radius: 15px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.get__movie::-webkit-scrollbar-thumb {
+  background-color: #dbdbdb;
+  border-radius: 15px;
 }
