--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -98,3 +98,10 @@ body::-webkit-scrollbar-thumb {
   }
   
 }
+
+.circles {
+  padding: 3rem;
+  background-color: #dbdbdb;
+  border: 1px solid;
+  border-radius: 50%;
+}
