--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -6,7 +6,7 @@
 @import "./search";
 @import "./searchall";
 
-// .get__movie {
+// .movies__wrapper {
 //   display: flex;
 //   flex-wrap: wrap;
 // }
