--- a/src/sass/pages/_search.scss
+++ b/src/sass/pages/_search.scss
@@ -40,7 +40,7 @@ hr {
     }
     .serch__detail_col {
         width: 70%;
-        .get__movie {
+        .movies__wrapper {
             display: flex;
             flex-direction: column;
             
