--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,50 +1,45 @@
-.details__cols {
-  margin: 10px;
-}
-
 .hide {
   display: none;
 }
-.bady__card {
-  word-wrap: break-word;
+.movies__wrapper.row {
+  gap: 20px;
+}
+.movies__wrapper.row .col {
+  flex: 1 250px;
 }
 
-.card__date p {
-  margin-top: 1rem;
-  font-size: 1em;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 5px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  border: 1px solid rgba(99, 99, 99, 0.527);
-  border-radius: 0.5rem;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  padding: 0.8rem;
-}
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 1rem 0;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-.dropdown:hover .dropdown-content {
-  display: block;
+nav {
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 5px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    border: 1px solid rgba(99, 99, 99, 0.527);
+    border-radius: 0.5rem;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 0.8rem;
+  }
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 1rem 0;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 }
 
 // Progress Bar
