--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -12,6 +12,7 @@ $text-muted: #52547A;
 $whiteBlue: #6d74ff13;
 $Blue-light: #6d74ff42;
 $facebook: #3b5999;
+$blue: rgb(3, 37, 65);
 $slack: #3aaf85;
 $twitter: #1da1f2;
 $dribbble: #DB4337;
@@ -19,6 +20,7 @@ $bgColor:rgba(32, 11, 11, 0.856);
 $gridGutter: 30px;
 $gridColumns: 12;
 $spacingCount: 8;
+$linerg: rgb(187, 253, 206);
 $shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 $shadow-lg: 0 1px 5px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.06);
 $box-shadow: 0 1rem 3rem rgba(13,27,72,.175)!important;
