--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -8,8 +8,9 @@
   flex: 1 250px;
 }
 
-nav {
-  .dropdown-content a {
+
+
+  .drop-content a {
     float: none;
     color: black;
     padding: 5px 16px;
@@ -17,7 +18,7 @@ nav {
     display: block;
     text-align: left;
   }
-  .dropdown-content {
+  .drop-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -27,7 +28,7 @@ nav {
     z-index: 1;
     padding: 0.8rem;
   }
-  .dropdown .dropbtn {
+  .drop .dropbtn {
     font-size: 16px;
     border: none;
     outline: none;
@@ -37,10 +38,10 @@ nav {
     font-family: inherit;
     margin: 0;
   }
-  .dropdown:hover .dropdown-content {
+  .drop:hover .drop-content {
     display: block;
   }
-}
+
 
 // Progress Bar
 
@@ -78,3 +79,70 @@ nav {
   font-weight: 800;
   color: #fff;
 }
+
+.card__hero {
+  width: 16rem;
+  height: 30rem;
+  .card__img--wrapper {
+    height: 20rem;
+      object-fit: cover;
+      overflow: hidden;
+    img {
+      width: 100%;
+      
+    }
+  }
+  
+ 
+}
+.movies {
+  .row.movies__wrapper{
+    padding: 1rem 0;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+  .row__outline--show {
+    padding: 1.8rem 0;
+    align-items: center;
+    .popular__title {
+      margin-right: 2rem;
+    }
+    .btn__wrapper--show {
+      border: 1px solid;
+      border-radius: 10rem;
+    }
+    .show__movie, .show__tv  {
+      border: none;
+      padding: .7rem 2.5rem;
+      border-radius: 10rem;
+      background-color: $mainWhite;
+      cursor: pointer;
+
+    }
+    .show__movie {
+      background-color: $blue;
+      color: $linerg;
+    }
+    // .show__movie:focus {
+    //   background-color: $blue;
+    //   color: $linerg;
+      
+
+    // }
+    .show__tv:focus {
+      background-color: $blue;
+      color: $linerg;
+    }
+  }
+  
+}
+
+
+
+
+
+
+
+
