--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,6 +9,7 @@ $mainBlue: #0d1b48;
 $mainYellow: #ffff00;
 $secondaryBlue: #424767;
 $text-muted: #52547A;
+$drobdawn-bordr: rgb(227, 227, 227);
 $whiteBlue: #6d74ff13;
 $Blue-light: #6d74ff42;
 $facebook: #3b5999;
