--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -1,109 +1,52 @@
 .actor__cards {
-  display: flex;
+   display: flex;
+   flex-wrap: nowrap;
+   margin-right: 600px;
+   margin-left: -100px;
+ 
+}
+.actors__cols {
+    display: flex;
+    flex-wrap: wrap;
+}
+.crew__films {
+    display: flex;
+    overflow: scroll;
+}
+.cast__films {
+    display: flex;
+    overflow: scroll;
 }
 
-.actor__img__wrapper {
-  width: 30%;
-  .actor__imgs img {
-    width: 30rem;
-    height: 450px;
-    border-radius: 1rem;
-    object-fit: cover;
-    margin-top: 1.5rem;
-  }
-}
-
-.actor__wrapper {
-  width: 70%;
-  margin-top: 1.5rem;
-}
-
-// .actor__title{
-
+// .actor__img {
+//     width: 20px;
+//     height: 285px;
 // }
-
-.cast__films.row {
-  gap: 2rem;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
-  padding: 1rem 0;
+.actor__img__wrapper{
+    .actor__imgs img{
+        width: 30rem;
+        height: 450px;
+        border-radius: 1rem;
+        object-fit: cover;
+        margin-top: 30px;
+        margin-left: 10px;
+    }
 }
-.cast__films.row .col {
-  flex: 1;
-}
-.cast__films::-webkit-scrollbar {
-  height: 8px;
-  border-radius: 15px;
-}
-.cast__films::-webkit-scrollbar-thumb {
-  background-color: #dbdbdb;
-  border-radius: 15px;
+.actor__text{
+    margin: 50px;
 }
 
 .nav__part a {
-  color: $mainBlack;
-}
-
-.actor__dropdown {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  li {
-    padding: 0.3rem 1.3rem;
-  }
-}
-
-.acting {
-  display: flex;
-  p {
-    border-bottom: 2px solid;
-    width: 1rem;
-  }
-  span {
-    width: 1rem;
-    height: 1rem;
-    border: 2px solid;
-    border-radius: 2rem;
-    padding: 0.5rem;
-  }
-}
-.drobdavn__bar {
-  border-bottom: 1px solid $drobdawn-bordr;
-}
-
-.actor__title {
-  padding: 1rem 0;
-
-}
-.biography__actor{
-  padding: 1rem 0;
-}
-
-.actor__known{
-  padding-top: 3rem ;
-  font-size: 1.8rem;
-  font-weight: 700;
-}
-
-.acting__wrepper{
-  display: flex;
-  align-items: center;
-  justify-content:space-between;
+    color: $mainBlack;
   
-}
-
-.crew__container{
-  border: 1px solid #dbdbdb;
-}
-.acting{
-  padding: 1rem;
-  p{
-    margin-right: 2rem;
   }
-  span{
-    margin-right: 2rem;
+  
+  .actor__dropdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    li {
+      padding: .3rem 1.3rem;
+    }
+    
   }
-}
-
