--- a/src/sass/pages/_search.scss
+++ b/src/sass/pages/_search.scss
@@ -29,7 +29,10 @@ h3 {
 .just:hover {
     background-color: blanchedalmond;
 }
-
+hr {
+    margin-top: 5rem;
+    border: 2px solid red($color: #d1cdcd);
+}
 .movie__wrapper {
     display: flex;
     .serch__detail {
