--- a/src/sass/pages/_people.scss
+++ b/src/sass/pages/_people.scss
@@ -6,9 +6,15 @@
 .people {
     display: flex;
     flex-wrap: wrap;
+    gap: 2rem;
 }
 .people__card{
-    margin-right: 4rem;
-    width: 235px;
-    height: 285px;
+    flex: 1;
+    min-width: 235px;
+    padding-top: 10px;
+
+    img {
+        height: 235px;
+        object-fit: cover;
+    }
 }
