--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -107,3 +107,12 @@
   }
 }
 
+.acting__title:hover{
+    color: aqua;
+    cursor: pointer;
+}
+
+span:hover{
+  background: black;
+  cursor: pointer;
+}
