--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -158,5 +158,11 @@
       }
       cursor: pointer;
     }
+    .card__text {
+      font-size: 1em;
+      margin: 0;
+      padding: 0;
+      color: rgba(0, 0, 0, 0.6);
+    }
   }
 }
