--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -1,4 +1,4 @@
-.movie__section{
+.movie__section {
   background-image: url(/src/assets/img/bg__movie.jpg);
   object-fit: cover;
   background-position-x: right;
@@ -9,18 +9,16 @@
     display: flex;
     .moviestyle {
       color: $mainWhite;
-     
+
       display: flex;
-      .details__moviess{
-        
+      .details__moviess {
         .details__img {
           width: 30rem;
           height: 45rem;
           margin: 1rem;
           object-fit: cover;
           img {
-          border-radius: 1rem;
-
+            border-radius: 1rem;
           }
         }
       }
@@ -36,8 +34,7 @@
           display: flex;
           padding-top: 2rem;
           .creter {
-          padding-right: 2rem;
-
+            padding-right: 2rem;
           }
         }
         .details__title h1 {
@@ -47,7 +44,6 @@
     }
   }
 }
-
 
 .cast__people {
   display: flex;
@@ -79,8 +75,8 @@
   // display: flex;
   // justify-content: center;
   .networks .col {
-    padding:.5rem 2rem;
-    font-size: 2.3rem; 
+    padding: 0.5rem 2rem;
+    font-size: 2.3rem;
   }
   .keyword__wreap {
     padding: 0 1rem;
@@ -90,18 +86,18 @@
   }
   .movie__keyword {
     padding: 1rem 0;
-      font-size: 1.6rem;
-      display: flex;
-      flex-wrap: wrap;
-      .col__key {
-        // width: 50%;
-        border: 1px solid  #dbdbdb;
-        margin: 1rem .5rem .5rem .5rem;
-        padding: .5rem 1rem;
-        border-radius: 1rem;
-        background-color: rgb(229, 229, 229);
-        cursor: pointer;
-      }
+    font-size: 1.6rem;
+    display: flex;
+    flex-wrap: wrap;
+    .col__key {
+      // width: 50%;
+      border: 1px solid #dbdbdb;
+      margin: 1rem 0.5rem 0.5rem 0.5rem;
+      padding: 0.5rem 1rem;
+      border-radius: 1rem;
+      background-color: rgb(229, 229, 229);
+      cursor: pointer;
+    }
   }
 }
 
@@ -118,7 +114,6 @@
 }
 .nav__part a {
   color: $mainBlack;
-
 }
 
 .nav__part {
@@ -126,9 +121,8 @@
   justify-content: center;
   align-items: center;
   li {
-    padding: .3rem 1.3rem;
+    padding: 0.3rem 1.3rem;
   }
-  
 }
 
 .movie__row {
@@ -139,7 +133,7 @@
     margin-right: 3rem;
   }
   .movie_icons {
-    background-color:$mainBlue;
+    background-color: $mainBlue;
     padding: 1.5rem 1.6rem;
     border-radius: 50%;
   }
@@ -187,13 +181,12 @@
 }
 
 .cast__people.row {
-    gap: 20px;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-    padding: 1rem 0;
-  
+  gap: 20px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 1rem 0;
 }
 .cast__people.row .col {
   flex: 1 150px;
@@ -201,27 +194,23 @@
 .card__moviess {
   border: 1px solid rgba(53, 52, 52, 0.274);
   width: 15rem;
-  border-radius: 1rem ;
+  border-radius: 1rem;
   height: 28rem;
   .card__img--wrapper {
     height: 20rem;
-      object-fit: cover;
-      overflow: hidden;
+    object-fit: cover;
+    overflow: hidden;
     img {
       width: 100%;
-      
     }
   }
-  
- 
 }
-
 
 .search__results {
   gap: 20px;
 }
 .search__results.row .col {
-  flex: 1 250px;
+  flex: 1;
 }
 
 .trealler {
@@ -232,7 +221,6 @@
     font-size: 1.6rem;
     cursor: pointer;
   }
-   
 }
 
 .keyvord__img {
@@ -250,7 +238,6 @@
     font-size: 2rem;
     font-weight: 700;
   }
-  
 }
 
 .card__keySearc {
@@ -262,25 +249,24 @@
   box-shadow: 1px 1px 5px 5px #dbdbdb;
 
   .card__img--wrapper {
-      height: 15rem;
-    
+    height: 15rem;
+
     img {
       width: 10rem;
       object-fit: cover;
     }
   }
-  .card__body  {
+  .card__body {
     padding: 2rem;
   }
 }
 .movie__status {
   padding: 1rem 0;
-  h4 , .status{
-    padding: .5rem;
+  h4,
+  .status {
+    padding: 0.5rem;
   }
 }
-
-
 
 .recommendations.row {
   gap: 20px;
@@ -323,7 +309,66 @@
   flex-wrap: wrap;
 }
 .movies__col__wrapper {
-  width: 30%;
+  width: 23%;
+  margin-right: 2rem;
+  details {
+    width: 100%;
+    height: 50%;
+    margin: 2rem 1rem 2rem 0;
+    padding: 14px 16px;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+    border: 1px solid rgba(227, 227, 227, 1);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    summary {
+      font-size: 1.1em;
+      list-style: none;
+    }
+    h3 {
+      font-size: 1em;
+      font-weight: 300;
+      margin-bottom: 10px;
+      color: #000;
+    }
+    #activitySelector {
+      width: 100%;
+      height: 100%;
+      padding: 0.375rem 0.75rem;
+      border-color: #e4e7eb;
+      color: #212529;
+      background-color: #e4e7eb;
+      border-radius: 5px;
+      outline: none;
+    }
+    ul li:hover {
+      background-color: #01b4e4;
+      color: #fff;
+    }
+  }
+  .searchsort {
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    border-radius: 20px;
+    height: 44px;
+    border: none;
+    font-size: 1.6rem;
+    font-weight: bold;
+    background-color: #01b4e4;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .searchsort:hover {
+    background-color: #05003b;
+    color: #fff;
+  }
 }
 .movies__col__wrap {
   width: 70%;
