--- a/src/sass/pages/_searchall.scss
+++ b/src/sass/pages/_searchall.scss
@@ -19,7 +19,12 @@
     }
   }
   li {
-    padding: 10px;
-    border: 5px;
+    display: inline-flex;
+    border: 1px solid #9e9e9e;
+    border-radius: 14px;
+    padding: 4px 12px;
+    font-size: 0.9em;
+    margin-right: 6px;
+    margin-top: 8px;
   }
 }
