--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -117,7 +117,7 @@ body::-webkit-scrollbar-thumb {
 
 .card__hero {
   width: 16rem;
-  height: auto;
+  height: 30rem;
   padding-bottom: 50px;
   box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
   border: 1px solid rgba(227, 227, 227, 1);
