--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -324,13 +324,14 @@
     justify-content: center;
     cursor: pointer;
     summary {
-      font-size: 1.1em;
+      font-size: 1.8rem;
       list-style: none;
+      font-weight: 600;
     }
     h3 {
-      font-size: 1em;
+      font-size: 1.5rem;
       font-weight: 300;
-      margin-bottom: 10px;
+      padding: 1rem 0;
       color: #000;
     }
     #activitySelector {
